[AMQ-8279] Compiler warning cleanups
 - Remove unsused imports (exept for generated classes)
 - Convert to T.valueOf on boxed primitives from new T()